--- a/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANConfigDialog.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANConfigDialog.razor
@@ -1,11 +1,12 @@
 ﻿@namespace SwashbucklerDiary.Maui.Pages
 @inherits FocusDialogComponentBase
 
-<MDialogExtension @ref="mDialogExtension"
-                  MyValue="Visible"
+<MDialogExtension MyValue="Visible"
                   MyValueChanged="VisibleChanged"
                   ContentClass="rounded-lg"
-                  MaxWidth="480">
+                  MaxWidth="480"
+                  OnAfterShowContent="FocusAsync"
+                  OnBeforeShowContent="BeforeShowContent">
     <MForm @ref="@MForm"
            Model="@configModel"
            OnValidSubmit="HandleOnOK"
