--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectTagsDialog.razor
@@ -1,12 +1,12 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
-@inherits ShowContentDialogComponentBase
+@inherits DialogComponentBase
 
-<MDialogExtension @ref="mDialogExtension"
-                  MyValue="Visible"
+<MDialogExtension MyValue="Visible"
                   MyValueChanged="InternalVisibleChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420"
-                  Scrollable="true">
+                  Scrollable="true"
+                  OnBeforeShowContent="BeforeShowContent">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Tag.Select"))
