🐛 fix: TextField clear button don`t trigger OnInput

--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/InputDialog.razor
@@ -20,7 +20,7 @@
             {
                 <MTextField @bind-Value="inputText"
                             @ref="textField"
-                            OnKeyDown="HandleOnEnter"
+                            OnEnter="HandleOnEnter"
                             Dense
                             MinHeight="44"
                             HideDetails="@("auto")"
