--- a/src/SwashbucklerDiary.Rcl/Components/TextField/TransparentTextField.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TextField/TransparentTextField.razor
@@ -1,17 +1,17 @@
 ﻿@namespace SwashbucklerDiary.Rcl.Components
 
-<MTextField TValue="string"
-            Value="@Value"
-            ValueChanged="ValueChanged"
-            OnInput="OnInput"
-            Class="rounded-lg"
-            BackgroundColor="transparent"
-            Solo="true"
-            Flat="true"
-            Autofocus="true"
-            Clearable="Clearable"
-            HideDetails="@("auto")"
-            Color="@TextFieldColor"
-            spellcheck="false"
-            Placeholder="@(Placeholder ?? I18n.T("Search.Please enter keywords"))">
-</MTextField>
+<MTextFieldExtension TValue="string"
+                     Value="@Value"
+                     ValueChanged="ValueChanged"
+                     OnInput="OnInput"
+                     Class="rounded-lg"
+                     BackgroundColor="transparent"
+                     Solo="true"
+                     Flat="true"
+                     Autofocus="true"
+                     Clearable="Clearable"
+                     HideDetails="@("auto")"
+                     Color="@TextFieldColor"
+                     spellcheck="false"
+                     Placeholder="@(Placeholder ?? I18n.T("Search.Please enter keywords"))">
+</MTextFieldExtension>
