🐛 fix: EnqueueSnackbar disappears when breakpoint changes

--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutNavDrawer/MainLayoutNavDrawer.razor
@@ -18,5 +18,5 @@
 </MNavigationDrawer>
 
 @code {
-    private bool Show => MasaBlazor.Breakpoint.SmAndUp && IsPermanentPath;
+    private bool Show => MasaBlazorHelper.Breakpoint.SmAndUp && IsPermanentPath;
 }
