--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -95,7 +95,7 @@
                     </MIcon>
                 </MListItemIcon>
                 <MListItemContent>
-                    @(I18n.T("Setting.Display.Alert.Name"))
+                    @(I18n.T("Setting.Display.Snackbars.Name"))
                 </MListItemContent>
                 <MListItemAction>
                     <MIcon>mdi-chevron-right</MIcon>
