🐛 fix: Writing a diary cannot be selected in Firefox browser

--- a/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/WritePage.razor
@@ -106,7 +106,7 @@
         </MTextField>
     }
 
-    <div class="write-input-wrap mb-sm-3">
+    <div class="write-input-wrap mb-sm-3 user-select">
         @if (enableMarkdown)
         {
             <MarkdownEdit @ref="markdownEdit"
