--- a/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/TagCard/TagCard.razor
@@ -5,7 +5,9 @@
        Elevation="0"
        Ripple="false"
        Rounded="@("lg")"
-       OnClick="ToTagPage">
+       OnClick="ToTagPage"
+       @oncontextmenu="OpenMenu"
+       __internal_preventDefault_oncontextmenu>
     <MListItem>
         <MListItemIcon>
             <MIcon>
