--- a/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/LocationCard/LocationCard.razor
@@ -4,7 +4,9 @@
 <MCard Class="mb-5 location-card elevation-sm-2--active"
        Elevation="0"
        Ripple="false"
-       Rounded="@("lg")">
+       Rounded="@("lg")"
+       @oncontextmenu="OpenMenu"
+       __internal_preventDefault_oncontextmenu>
     <MListItem>
         <MListItemIcon>
             <MIcon Class="evident-icon">
