💄 style: update a little style

--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -40,7 +40,7 @@
                     </MIcon>
                 </MListItemIcon>
 
-                <MListItemContent>
+                <MListItemContent Class="flex-basic-space">
                     @(I18n.T("User.UserName.Name"))
                 </MListItemContent>
 
@@ -64,7 +64,7 @@
                     </MIcon>
                 </MListItemIcon>
 
-                <MListItemContent>
+                <MListItemContent Class="flex-basic-space">
                     <MListItemTitle>
                         @(I18n.T("User.Sign.Name"))
                     </MListItemTitle>
