--- a/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
@@ -113,7 +113,7 @@
                         </MListItemSubtitle>
                     </MListItemContent>
                     <MListItemContent Class="setting-state">
-                        <MListItemSubtitle>
+                        <MListItemSubtitle Class="font-weight-bold">
                             @privacyModeFunctionSearchKey
                         </MListItemSubtitle>
                     </MListItemContent>
