--- a/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
@@ -17,7 +17,7 @@
     <SwiperTabItem>
         <MContainer Class="my-container"
                     Fluid="true">
-            <div class="pl-2">
+            <div class="pl-2 pb-3">
                 @if (showDate)
                 {
                     <div class="text--secondary mb-2">
@@ -27,7 +27,7 @@
 
                 @if (showWelcomeText)
                 {
-                    <div class="text-h6 mb-5">
+                    <div class="text-h6 mb-2">
                         @GetWelcomeText()
                     </div>
                 }
