--- a/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/IndexPage.razor
@@ -50,20 +50,27 @@
     </SwiperTabItem>
 </SwiperTabItems>
 
-<MWindow Value="tab" Style="height:0;z-index:1;">
-    <MWindowItem Transition="">
-        <RightBottomFloatButton Icon="mdi-pencil"
-                                OnClick="@(()=>To("write"))">
-        </RightBottomFloatButton>
-    </MWindowItem>
-    <MWindowItem Transition="">
-        <RightBottomFloatButton Icon="mdi-plus"
-                                OnClick="()=>ShowAddTag=true">
-        </RightBottomFloatButton>
-    </MWindowItem>
-</MWindow>
+<div class="right-bottom-float-area">
+    <BackTopButton Class="mb-2"
+                   Selector="@SwiperActiveItemSelector">
+    </BackTopButton>
+    <MWindow Value="tab" Style="overflow:unset;">
+        <MWindowItem Transition="">
+            <MyFloatButton Icon="mdi-pencil"
+                           OnClick="@(()=>To("write"))">
+            </MyFloatButton>
+        </MWindowItem>
+        <MWindowItem Transition="">
+            <MyFloatButton Icon="mdi-plus"
+                           OnClick="()=>showAddTag=true">
+            </MyFloatButton>
+        </MWindowItem>
+    </MWindow>
+</div>
 
-<InputDialog @bind-Visible="ShowAddTag"
+
+
+<InputDialog @bind-Visible="showAddTag"
              Title="@(I18n.T("Tag.Add"))"
              Placeholder="@(I18n.T("Tag.Placeholder"))"
              OnOK="SaveAddTag">
