--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -25,7 +25,7 @@
             </MIcon>
         </MButton>
         <MButton Icon="true"
-                 OnClick="OnEdit">
+                 OnClick="ToWrite">
             <MIcon>
                 mdi-pencil
             </MIcon>
@@ -112,7 +112,7 @@
             </MTextField>
         }
 
-        <div class="my-sm-3 user-select">
+        <div class="my-sm-3 user-select" @ondblclick="ToWrite">
             @if (enableMarkdown)
             {
                 <MarkdownPreview @ref="markdownPreview"
